# blind-recruiter

./: .gitignore  LICENSE  README.md  pyproject.toml
blind_recruiter/models/: parsed_resume.py  test.py
notebooks/: _ignore-llm-resume-text-to-json.ipynb  llm-resume-text-to-json-chat-model-only.ipynb  llm-resume-text-to-json-partial-iteration.ipynb
notebooks/test_data/: fictional-resume.md
